--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,43 +1,12 @@
 <h2>Triage With Resque</h2>
 
-<%- if current_user.blank? -%>
-  <p>
-    Welcome, to get started with Opro first <%= link_to 'sign up', new_user_registration_path %> and then head over to the built in <%= link_to 'quick start guide', oauth_doc_path(:quick_start) %>.
-  </p>
+
+<h2>Example</h2>
 
 
-
-<h2>Why Sign up?</h2>
-<p>Once you sign up, you can create a fully functioning OAuth key for your user. Without a user account this demo is pretty much non functional</p>
-
-<%= link_to 'Create Random User Account', users_random_index_path, :class => 'btn btn-primary', :method => :post %>
-
-<%- else -%>
-  <p>
-    You're all signed in, you can read the built in <%= link_to 'quick start guide', oauth_doc_path(:quick_start) %> or be guided step by step
-
-    <%= link_to 'Create an OAuth Client App!' , oauth_walkthrough_path(:create_app), :class => 'btn btn-primary' %>
-
-  </p>
-
-  <p>
-    <ul>
-      <li><%= link_to 'View your Profile', user_path(current_user) %></li>
-      <li><%= link_to 'View your OAuth client Apps',  oauth_client_apps_path %></li>
-      <li><%= link_to 'Create new Oauth Client App', new_oauth_client_app_path %></li>
-    </ul>
-  </p>
-  <hr />
-<%- end -%>
-
-
-\ No newline at end of file
-+<h2>Example</h2>
-+
-+
-+<% if current_user %>
-+  You are signed in as <%= "@#{current_user.github}" %>
-+<% else %>
-+  <%= link_to "Sign in with Github", user_omniauth_authorize_path(:github), :class => 'btn btn-primary' %>
-+<% end %>
-+  <%= link_to "Sign in with Github", user_omniauth_authorize_path(:github), :class => 'btn btn-primary' %>
+<% if current_user %>
+  You are signed in as <%= "@#{current_user.github}" %>
+<% else %>
+  <%= link_to "Sign in with Github", user_omniauth_authorize_path(:github), :class => 'btn btn-primary' %>
+<% end %>
+<%= link_to "Sign in with Github", user_omniauth_authorize_path(:github), :class => 'btn btn-primary' %>
