--- a/app/views/repos/new.html.erb
+++ b/app/views/repos/new.html.erb
@@ -4,5 +4,7 @@
   <%= f.text_field :user_name, :placeholder => 'user name' %>/
   <%= f.text_field :name, :placeholder => 'repo name' %>
 
-
+  <p>
+    <%= f.submit :class => 'btn btn-primary' %>
+  </p>
 <% end %>
