--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -6,3 +6,13 @@
 .underline {
   text-decoration: underline;
 }
+
+.pagination em {
+float: left;
+padding: 0 14px;
+line-height: 34px;
+text-decoration: none;
+border: 1px solid
+#DDD;
+border-left-width: 0;
+}
