general functionality update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a href="/" class="brand">example</a>
+          <a href="/" class="brand">Resque Triage</a>
           <!--
             IMPORTANT:
             This is Heroku specific markup. Remove to customize.
