--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,15 @@
       <div class="navbar-inner">
         <div class="container">
           <a href="/" class="brand">Resque Triage</a>
+          <div class='nav-collapse'>
+            <ul class='nav'>
+              <%- if current_user.present? -%>
+                <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
+              <%- else -%>
+                <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+              <%- end -%>
+            </ul>
+          </div>
           <!--
             IMPORTANT:
             This is Heroku specific markup. Remove to customize.
