--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -11,14 +11,28 @@
 	When you volunteer to triage a issues, you'll receive an email each day with a link to an open issue that needs to be triaged in this project. You'll also receive instructions on how to triage issues.
 </p>
 
-<% if current_user.blank? || current_user.not_yet_subscribed_to?(@repo) %>
+<% if @repo_sub.blank? %>
 	<%= button_to "I Want to Triage: #{@repo.username_repo}", repo_subscriptions_path(:repo_id => @repo.id), :class => 'btn btn-primary' %>
 <% else %>
 <p>
+    <%= link_to 'Send new issue!', issue_assignments_path(:id => @repo_sub.id), :class => 'btn btn-primary', :method => :post %>
+</p>
+
+
+<p>
   You are already subscribed to <%= @repo.username_repo %>
-  <%= button_to "Stop Triaging: #{@repo.username_repo}", repo_subscription_path(current_user.sub_from_repo(@repo)), :class => 'btn btn-danger', :method => :delete, :confirm => "Are you sure?" %>
+  <%= button_to "Stop Triaging: #{@repo.username_repo}", repo_subscription_path(@repo_sub), :class => 'btn btn-danger', :method => :delete, :data => { :confirm => 'Are you sure?' } %>
 
 </p>
+
+
+<hr />
+<h2>You've been assigned: <%= @repo_sub.issues.count %> issues for triage</h2>
+<ul>
+<% @repo_sub.issues.order('created_at DESC').each do |issue| %>
+  <li><%= issue.state.upcase %> | <%= link_to issue.title, issue.html_url %> </li>
+<% end %>
+</ul>
 
 <% end %>
 </p>
@@ -40,3 +54,5 @@
     <% end %>
   </ul
 <hr />
+
+
