use repo url instead of path in email

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,6 +16,9 @@
 <hr />
 
 <h2>Repos With the most Issues<h2>
+<p>
+  (Updated every 24 hours)
+</p>
 
 <% cache('repos_with_the_most_issues', :expires_in => 5.minutes) do %>
   <ul>
