--- a/app/views/user_mailer/send_triage.html.erb
+++ b/app/views/user_mailer/send_triage.html.erb
@@ -46,7 +46,7 @@ If the issue goes stale, leave a comment asking if it is still a problem. If you
 
 <hr />
 
-<p><%= link_to "Unsubscribe from triaging: #{@repo.username_repo}", @repo %></p>
+<p><%= link_to "Unsubscribe from triaging: #{@repo.username_repo}", repo_url(@repo) %></p>
 
-<p><%= link_to "Send me another issue from: #{@repo.username_repo}", @repo %></p>
+<p><%= link_to "Send me another issue from: #{@repo.username_repo}", repo_url(@repo) %></p>
 
