--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,7 +24,7 @@
   <ul>
     <% @repos.first(50).each do |repo| %>
       <li>
-        <%= link_to "#{repo.user_name}/#{repo.name}", repo %>, <%= repo.issues.count %>
+        <%= link_to "#{repo.user_name}/#{repo.name}", repo %>, <%= repo.issues.where(:state => 'open').count %>
       </li>
     <% end %>
   </ul>
