--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -49,7 +49,7 @@
   <ul>
     <% @issues.each do |issue| %>
       <li>
-        <%= link_to issue.title, issue.url %>
+        <%= link_to issue.title, issue.html_url %>
       </li>
     <% end %>
   </ul
