Rename everything to issue triage instead of "resque triage"

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Help Triage Github Issues With Resque</h2>
+<h2>Help Triage Github Issues With Your Favorite Projects</h2>
 
 <% if current_user %>
   You are signed in as <%= "@#{current_user.github}"  %> from Github
