--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -37,7 +37,7 @@
   <ul>
     <% @repos.first(50).each do |repo| %>
       <li>
-        <%= link_to "#{repo.user_name}/#{repo.name}", repo %>, <strong><%= repo.issues.where(:state => 'open').count %></strong>
+        <%= link_to "#{repo.user_name}/#{repo.name}", repo %>, <strong><%= repo.issues_count %></strong>
       </li>
       <br />
     <% end %>
