Typos and whitespace.

--- a/app/views/pages/show/how.html.erb
+++ b/app/views/pages/show/how.html.erb
@@ -25,6 +25,6 @@ To define this task we create a new class that has a perform action and specifie
       end
     end
 
-Here our queue is `popfulate_issues` and when run the `perform` class method will be called with an id element we pass in. You can enqueue elements by running:
+Here our queue is `populate_issues` and when run the `perform` class method will be called with an id element we pass in. You can enqueue elements by running:
 
 
