--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -8,7 +8,7 @@
 
 <h2>Help Triage Issues!</h2>
 <p>
-	When you volunteer to triage a issues, you'll receive an email each day with a link to an open issue that needs to be triaged in this project. You'll also receive instructions on how to triage issues.
+	When you volunteer to triage issues, you'll receive an email each day with a link to an open issue that needs to be triaged in this project. You'll also receive instructions on how to triage issues.
 </p>
 
 <% if @repo_sub.blank? %>
