--- a/app/views/user_mailer/send_triage.html.erb
+++ b/app/views/user_mailer/send_triage.html.erb
@@ -4,9 +4,9 @@ Hello <%= @user.github %>,
 You signed up to help triage Github issues on <%= link_to @repo.username_repo, @repo.github_url %>. That's pretty awesome.
 </p>
 
-<h2>Issue To Triage in <%= @repo.username_repo %></h2>
+<h2>Triage Issue: <%= @repo.username_repo %><%= "##{@issue.number}" if @issue.number %></h2>
 
-<h3><%= link_to @issue.title, @issue.html_url %></h3>
+<h2><%= link_to @issue.title, @issue.html_url %></h2>
 
 <h2>Goals of Triage</h2>
 
@@ -46,7 +46,7 @@ If the issue goes stale, leave a comment asking if it is still a problem. If you
 
 <hr />
 
-<p><%= link_to "Unsubscribe from triaging: #{@repo.username_repo}", repo_url(@repo) %></p>
+<p><%= link_to "Send another #{@repo.username_repo} issue", repo_url(@repo) %></p>
+<p><%= link_to "Unsubscribe: #{@repo.username_repo}", repo_url(@repo) %></p>
 
-<p><%= link_to "Send me another issue from: #{@repo.username_repo}", repo_url(@repo) %></p>
 
