incremental improvements to UsersController#show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 
-<label class="label"><%= t("activerecord.attributes.user.email", :default => t("activerecord.labels.email", :default => "Email")) %>:</label>
+<label class="label">Email:</label>
 <p><%= @user.email %></p>
 
+<label class="label">Github:</label>
+<p><%= "@#{@user.github }"%></p>
+
 <div class="form-actions">
-<%= link_to "Back", users_path, :class => 'btn'  %>
-<%= link_to "Edit", edit_user_path(@user), :class => 'btn' %>
-<%= link_to "Delete", user_path(@user), :method => "delete", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}", :class => 'btn' %>
+<%= link_to "↩ Back", users_path, :class => 'btn btn-primary'  %>
+<%# link_to "Edit", edit_user_path(@user), :class => 'btn btn-primary' %>
+<%= link_to "X | Delete", user_path(@user), :method => "delete", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}", :class => 'btn btn-danger' %>
 </div>
