--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
           <div class='nav-collapse'>
             <ul class='nav'>
               <%- if current_user.present? -%>
-                <li><%= image_tag current_user.avatar_url %>
+                <li><%= image_tag current_user.avatar_url, class: 'img-rounded' %>
                 <li><%= link_to "Sign Out (#{current_user.github})", destroy_user_session_path, :method => :delete %></li>
               <%- else -%>
                 <li><%= link_to 'Sign Up', new_user_registration_path %></li>
