--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -7,17 +7,16 @@
 }
 
 .pagination em {
-float: left;
-padding: 0 14px;
-line-height: 34px;
-text-decoration: none;
-border: 1px solid
-#DDD;
-border-left-width: 0;
+  float: left;
+  padding: 0 14px;
+  line-height: 34px;
+  text-decoration: none;
+  border: 1px solid #DDD;
+  border-left-width: 0;
 }
 
 a.btn:visited {
-  color:white;
+  color: white;
 }
 
 .navbar .nav img {
