--- a/app/views/repo_subscriptions/index.html.erb
+++ b/app/views/repo_subscriptions/index.html.erb
@@ -1,15 +1,1 @@
-<%= content_tag :h2, "Repos you are Triaging" %>
-<ul>
-  <% @repos_subs.each do |sub| %>
-  <li style="margin-top:10px">
-
-    <%= link_to sub.repo.github_url, sub.repo %> |
-    <%= link_to "Github Issues", sub.repo.issues_url %>
-    <%= link_to 'Send new issue', issue_assignments_path(:id => sub.id), :class => 'btn btn-primary', :method => :post %>
-    <%= link_to 'X', sub, :method => :delete, :class => 'btn btn-danger', :confirm => "Are you sure you want to quit triaging '#{sub.repo.path}'?" %>
-  </li>
-  <% end %>
-</ul>
-
-<hr />
-<%= link_to 'Find additional repos to Triage', repos_path %>
+<%= render 'list' %>
