--- a/app/views/repo_subscriptions/index.html.erb
+++ b/app/views/repo_subscriptions/index.html.erb
@@ -1,21 +1,1 @@
-<%= content_tag :h2, "Repos you are Triaging" %>
-<table class="table table-bordered">
-  <tbody>
-  <% @repos_subs.each do |sub| %>
-  <tr>
-    <td><%= link_to sub.repo.username_repo, sub.repo %></td>
-    <td><%= link_to "Github Issues", sub.repo.issues_url %></td>
-    <td>
-      <%= link_to(issue_assignments_path(:id => sub.id), :class => 'btn btn-primary', :method => :post) do %>
-        <i class="icon-envelope icon-white"></i> Get next issue
-      <% end %>
-      <%= link_to(sub, :method => :delete, :class => 'btn btn-danger', :confirm => "Are you sure you want to quit triaging '#{sub.repo.path}'?") do %>
-        <i class="icon-remove icon-white"></i> Quit triaging
-      <% end %>
-    </td>
-  </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<%= link_to 'Find additional repos to Triage', repos_path, :class => 'btn btn-info btn-large' %>
+<%= render 'list' %>
