Styling tweaks and layout changes
Changes are mainly to improve the flow of getting people in and getting
repos added to their subscriptions.

--- a/app/views/repo_subscriptions/index.html.erb
+++ b/app/views/repo_subscriptions/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :h2, "Repos you are Triaging" %>
+<%= render 'list' %>
 <table class="table table-bordered">
   <tbody>
   <% @repos_subs.each do |sub| %>
