--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,14 +18,14 @@
 </p>
 
 
-
-
-
-
-
-
-
-
+<ul class="unstyled">
+  <% @repos.first(50).each do |repo| %>
+    <li>
+      <%= link_to "#{repo.user_name}/#{repo.name}", repo %> <span class="label label-info"><%= repo.issues_count %> issues</span>
+    </li>
+    <br />
+  <% end %>
+</ul>
 
 <hr />
 <p>
