--- a/app/views/repos/new.html.erb
+++ b/app/views/repos/new.html.erb
@@ -20,13 +20,15 @@
 
 <%= content_for :js do %>
   <script type='text/javascript'>
-    $('#repo_user_name, #repo_name').on('keyup', function(){
+    var addGithubLinkHelper = function() {
       var user_name = $('#repo_user_name').val();
       var repo_name = $('#repo_name').val();
       var github = "https://github.com/" + user_name + "/" + repo_name
       $('#repoPreview').html(github)
       $('#repoPreview').attr('href', github)
-    } )
+    };
+    $('#repo_user_name, #repo_name').on('keyup', addGithubLinkHelper)
+    addGithubLinkHelper();
   </script>
 <% end %>
 
