--- a/app/views/repo_subscriptions/_list.html.erb
+++ b/app/views/repo_subscriptions/_list.html.erb
@@ -1,24 +1,21 @@
 <%= content_tag :h2, "Repos you are helping" %>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<table class="table table-striped">
   <tbody>
     <% @repos_subs.each do |sub| %>
       <tr>
-        <td><%= link_to "<b>#{sub.repo.to_param}</b>".html_safe, sub.repo.github_url %></td>
-        <td><%= link_to "Project Issues", sub.repo.issues_url, class: 'btn btn-primary btn-mini' %></td>
-        <td><%= link_to "<i class='icon-arrow-right icon-white'></i> Send me a new issue".html_safe, issue_assignments_path(id: sub.id), class: 'btn btn-primary btn-mini', method: :post %></td>
-        <td><%= link_to "<i class='icon-trash icon-white'></i> Stop Triage".html_safe, sub, method: :delete,  confirm: "Are you sure you want to stop triaging '#{sub.repo.path}'", class: 'btn btn-mini btn-danger' %></td>
+        <td><%= link_to sub.repo.username_repo, sub.repo %></td>
+        <td><%= link_to "Project Issues", sub.repo.issues_url %></td>
+        <td>
+          <%= link_to(issue_assignments_path(:id => sub.id), :class => 'btn btn-primary', :method => :post) do %>
+            <i class="icon-envelope icon-white"></i> Send me another issue
+          <% end %>
+          <%= link_to(sub, :method => :delete, :class => 'btn btn-danger', :confirm => "Are you sure you want to quit triaging '#{sub.repo.path}'?") do %>
+            <i class="icon-remove icon-white"></i> Quit triaging
+          <% end %>
+        </td>
       </tr>
-    <% end -%>
+    <% end %>
   </tbody>
 </table>
 
-<%= link_to 'Find additional repos to Triage', repos_path unless params[:controller] == 'pages' %>
+<%= link_to 'Find additional repos to Triage', repos_path, :class => 'btn btn-info btn-large' %>
