List subscribers to a project.

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -19,7 +19,7 @@ a.btn:visited {
   color: white;
 }
 
-.navbar .nav img {
+.avatar, .navbar .nav img {
   max-height: 36px;
   margin: 2px auto;
 }
