--- a/app/views/shared/_repos.html.erb
+++ b/app/views/shared/_repos.html.erb
@@ -2,7 +2,7 @@
   <% repos.first(50).each do |repo| %>
     <li>
       <span class="badge badge-info"><%= repo.issues_count %></span>
-      <%= link_to "#{repo.user_name}/#{repo.name}", repo %>
+      <%= link_to repo.to_param, repo %> <small>(<%= repo.language %>)</small>
     </li>
   <% end %>
 </ul>
