--- a/app/views/repos/index.html.erb
+++ b/app/views/repos/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Subscribe To a Repo on Github</h2>
 
-<%= render 'shared/repos', repos: @repos %>
+<%= render 'shared/repos', repos: @repos, languages: @languages, selected_lang: @selected_lang %>
 
 <%= will_paginate @repos %>
 
