--- a/app/views/shared/_repos.html.erb
+++ b/app/views/shared/_repos.html.erb
@@ -1,10 +1,31 @@
-<ul class="unstyled repos-list">
-  <% repos.first(50).each do |repo| %>
-    <li>
-      <span class="badge badge-info"><%= repo.issues_count %></span>
-      <%= link_to repo.to_param, repo %> <small>(<%= repo.language %>)</small>
-    </li>
-  <% end %>
-</ul>
+<% lang_index = 0 %>
+
+<div class="row">
+  <ul class="nav nav-tabs nav-stacked span2" data-tabs="tabs" id="repo-tabs">
+    <% repos.group_by(&:language).each do |lang, repos| %>
+      <% unless lang == nil %>
+        <li><a href="#<%= lang.parameterize %>" data-toggle="tab"><%= lang %></a></li>
+      <% end -%>
+    <% end -%>
+  </ul>
+
+  <div class="tab-content span6">
+    <% repos.group_by(&:language).each do |lang, repos| %>
+      <% unless lang == nil %>
+        <div class="tab-pane<%= " active" if lang_index == 0 %>" id="<%= lang.parameterize %>">
+          <ul class="unstyled repos-list">
+            <% repos.each do |repo| %>
+              <li>
+                <span class="badge badge-info"><%= repo.issues_count %></span>
+                <%= link_to repo.to_param, repo %>
+              </li>
+            <% end -%>
+          </ul>
+        </div>
+        <% lang_index = lang_index + 1 %>
+      <% end -%>
+    <% end -%>
+  </div>
+</div>
 
 <hr />
