--- a/app/views/repos/new.html.erb
+++ b/app/views/repos/new.html.erb
@@ -4,28 +4,30 @@
 
 <% if user_signed_in? %>
   <h2>Your repos</h2>
-  <p>Only repos that you own, and have Github issues enabled are shown</p>
-  <table class="table table-striped">
-    <% @own_repos.each do |repo| %>
-      <% if repo["has_issues"] %>
-        <tr>
-          <%= form_for @repo do |f| %>
-            <%= f.hidden_field :user_name, :value => repo["full_name"].split("/").first %>
-            <%= f.hidden_field :name, :value => repo["full_name"].split("/").last %>
-            <td><%= repo["full_name"] %></td>
-            <td><%= repo["open_issues_count"] %> issues</td>
-            <td>
-              <% if  Repo.exists_with_name?(repo["full_name"]) %>
-                <p>Added!</p>
-              <% else -%>
-                <%= f.submit "Add", class: 'btn btn-mini btn-primary'  %>
-              <% end %>
-            </td>
-          <% end %>
-        </tr>
-      <% end -%>
-  <% end -%>
-  </table>
+  <p>Only repos that have Github issues enabled are shown</p>
+
+  <div class="row">
+    <ul class="nav nav-tabs nav-stacked span2" data-tabs="tabs" id="repo-tabs">
+      <li><a href="#own" data-toggle="tab">Your own repos</a></li>
+      <li><a href="#starred" data-toggle="tab">Starred repos</a></li>
+      <li><a href="#watched" data-toggle="tab">Watched repos</a></li>
+    </ul>
+
+    <div class="tab-content span6">
+      <div class="tab-pane active" id="own">
+        <%= render 'shared/add_repos_list', repos: @own_repos %>
+      </div>
+
+      <div class="tab-pane active" id="starred">
+        <%= render 'shared/add_repos_list', repos: @starred_repos %>
+      </div>
+
+      <div class="tab-pane active" id="watched">
+        <%= render 'shared/add_repos_list', repos: @watched_repos %>
+      </div>
+    </div>
+  </div>
+
 <% end -%>
 
 <h3>Add another repo</h3>
