Sort GitHub repos using a collection.
Rather than reopen Array.

--- a/app/views/shared/_add_repos_list.html.erb
+++ b/app/views/shared/_add_repos_list.html.erb
@@ -2,7 +2,7 @@
   <p>None!</p>
 <% else %>
   <table class="table table-striped">
-    <% repos.sorted_repo_list.each do |repo| %>
+    <% repos.each do |repo| %>
       <% if repo["has_issues"] && !repo["private"] %>
         <tr>
           <%= form_for @repo do |f| %>
