--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,18 @@
 <label class="label">Github:</label>
 <p><%= "@#{@user.github }"%></p>
 
+<label class="label">Public Account:</label>
+<p><%= @user.public? %></p>
+<p><small>If your account is public others can see what repos you are triaging. Your email is never shared, ever.</small></p>
+
 <div class="form-actions">
-<%= link_to "↩ Back", users_path, :class => 'btn btn-primary'  %>
-<%# link_to "Edit", edit_user_path(@user), :class => 'btn btn-primary' %>
-<%= link_to "X | Delete", user_path(@user), :method => "delete", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}", :class => 'btn btn-danger' %>
+<%= link_to "↩ Back", users_path, class: 'btn btn-primary'  %>
+
+<% if @user.public? %>
+  <%= link_to "Make account private", users_path(user: {private: true}), method: :put, :class => 'btn btn-primary'  %>
+<% else %>
+  <%= link_to "Make account public", users_path(user: {private: false}), method: :put, :class => 'btn btn-primary'  %>
+
+<% end %>
+<%= link_to "X | Delete", user_path(@user), method: "delete", confirm: "#{t("web-app-theme.confirm", :default => "Are you sure?")}", class:  'btn btn-danger' %>
 </div>
