--- a/app/views/user_mailer/poke_inactive.text.erb
+++ b/app/views/user_mailer/poke_inactive.text.erb
@@ -11,7 +11,7 @@ Help a repo in need:
 Help a random repo:
 <%= link_to @random_repo.username_repo, repo_url(@random_repo) %>
 
-If you don't like any of those <%= link_to "add your own", new_repo_url %> repo, <%= link_to "browse existing " , repos_url %> repos, or you can even subscribe to <%= link_to "code triage itself", File.join(root_url, "/heroku/issue_triage") %>. The important part is that you pick something to triage, or you will get this same email next week, maybe with different repos.
+If you don't like any of those <%= link_to "add your own", new_repo_url %> repo, <%= link_to "browse existing " , repos_url %> repos, or you can even subscribe to <%= link_to "code triage itself", File.join(root_url, "/codetriage/codetriage") %>. The important part is that you pick something to triage, or you will get this same email next week, maybe with different repos.
 
 To unsubscribe entirely <%= link_to "delete your account", user_url(@user) %> but don't do that, subscribe to an issue above and do some good in the world. I believe in you.
 
