Allow repo owners to edit repos to add some notes in markdown for advertising extra info

--- a/app/views/subscribers/_avatars.html.erb
+++ b/app/views/subscribers/_avatars.html.erb
@@ -1,4 +1,4 @@
-<ul class="unstyled">
+<ul class="unstyled avatars_list">
   <%= content_tag_for(:li, subscribers) do |subscriber| %>
     <%= image_tag subscriber.avatar_url, alt: subscriber.name, class: 'avatar img-rounded' %>
     <%= link_to "#{subscriber.name} (#{subscriber.github})", subscriber.github_url if (show_names ||= false) %>
