--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -1,19 +1,48 @@
-<h1><%= @repo.username_repo %> <small><%= @repo.language %></small></h1>
+<div class="row">
+  <div class="span8">
+    <h1><%= @repo.username_repo %> <small><%= @repo.language %></small></h1>
+    <p><%= link_to @repo.github_url, @repo.github_url %> </p>
+    <hr />
+  </div>
+</div>
 
+<div class="row">
+  <div class="span6">
 
-<ul class="unstyled">
-  <li><%= link_to @repo.github_url, @repo.github_url %> </li>
-  <%= render 'subscribers/avatars', subscribers: @subscribers, show_names: false %>
-  <li>
-    <%= link_to repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) do %>
-      View subscribers
-    <% end %>
-  </li>
-</ul>
+    <ul class="unstyled">
+      <%= render 'subscribers/avatars', subscribers: @subscribers, show_names: false %>
+      <li>
+        <%= link_to repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) do %>
+          View subscribers
+        <% end %>
+      </li>
+    </ul>
 
-<p>
-  <%= @repo.description %>
-</p>
+    <p>
+      <%= @repo.description %>
+    </p>
+
+    <% unless @repo.notes.blank? %>
+      <p>
+        <%= raw BlueCloth.new(@repo.notes).to_html %>
+      </p>
+    <% end -%>
+  </div>
+
+  <div class="span2">
+    <% if user_signed_in? && current_user.able_to_edit_repo?(@repo) %>
+      <p>
+      <%= link_to "Edit this repo", edit_repo_path(@repo), class: 'btn btn-mini' %>
+      </p>
+    <% end -%>
+
+    <p>
+      <%= link_to repo_subscription_path(@repo_sub), :class => 'btn btn-danger', :method => :delete, :data => { :confirm => 'Are you sure?' } do %>
+        <i class="icon-remove icon-white"></i> Stop Triaging
+      <% end %>
+    </p>
+  </div>
+</div>
 
 <hr />
 
@@ -25,33 +54,12 @@
 <% if @repo_sub.blank? %>
 	<%= button_to "I Want to Triage: #{@repo.username_repo}", repo_subscriptions_path(:repo_id => @repo.id), :class => 'btn btn-primary' %>
 <% else %>
-<p>
+  <p>
     <%= link_to issue_assignments_path(:id => @repo_sub.id), :class => 'btn btn-primary', :method => :post do %>
       <i class="icon-envelope icon-white"></i> Send new issue!
     <% end %>
-</p>
-
-
-<p>
-  You are already subscribed to <%= @repo.username_repo %>.
-  <br/>
-  <%= link_to repo_subscription_path(@repo_sub), :class => 'btn btn-danger', :method => :delete, :data => { :confirm => 'Are you sure?' } do %>
-    <i class="icon-remove icon-white"></i> Stop Triaging: <%= @repo.username_repo %>
-  <% end %>
-
-</p>
-
-
-<hr />
-<h2>You've been assigned: <%= @repo_sub.issues.count %> issues for triage</h2>
-<ul>
-<% @repo_sub.issues.order('created_at DESC').each do |issue| %>
-  <li><%= issue.state.upcase %> | <%= link_to issue.title, issue.html_url %> </li>
+  </p>
 <% end %>
-</ul>
-
-<% end %>
-</p>
 
 <hr />
 <h2><%= @issues.total_entries %> open issues in <%= @repo.username_repo %></h2>
