open external links in new tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
 
     <script src="http://heroku.github.com/template-app-bootstrap/jquery-1.7.1.min.js"></script>
     <script src="http://heroku.github.com/template-app-bootstrap/jquery.replacetext.min.js"></script>
+
     <%= javascript_include_tag "application" %>
+
+    <%= javascript_include_tag "link" %>
 
     <!--
       IMPORTANT:
