--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -1,3 +1,26 @@
+.container-narrow {
+  margin: 0 auto;
+  width: 700px;
+}
+.jumbotron {
+  margin: 60px 0;
+  text-align: center;
+}
+.jumbotron h1 {
+  font-size: 64px;
+  line-height: 1;
+  margin: 10px auto;
+}
+.buffer {
+  margin: 30px auto;
+}
+h2 {
+  margin: 0 auto 20px 0;
+}
+.alert {
+  margin: 20px auto;
+}
+
 .hide {
   display: none;
 }
@@ -16,15 +39,13 @@
 }
 
 .avatar, .navbar .nav img {
-  max-height: 36px;
+  max-height: 50px;
   margin: 2px auto;
 }
 
 ul.repos-list li {
-  float: left;
-  width: 340px;
-  height: 20px;
-  display: inline-block;
+  margin: 0 auto 30px 0;
+
 }
 
 .span6 ul.repos-list li {
