--- a/app/views/repo_subscriptions/_list.html.erb
+++ b/app/views/repo_subscriptions/_list.html.erb
@@ -1,21 +1,12 @@
-<%= content_tag :h2, "Repos you are helping" %>
-<table class="table table-striped">
-  <tbody>
-    <% @repos_subs.each do |sub| %>
-      <tr>
-        <td><%= link_to sub.repo.username_repo, sub.repo %></td>
-        <td><%= link_to "Project Issues", sub.repo.issues_url %></td>
-        <td>
-          <%= link_to(issue_assignments_path(:id => sub.id), :class => 'btn btn-primary', :title => "Send another issue from  #{sub.repo.username_repo}" , :method => :post) do %>
-            +1 <i class="icon-envelope icon-white"></i>
-          <% end %>
-          <%= link_to(sub, :method => :delete, :class => 'btn btn-danger', :title => "Quit triaging #{sub.repo.username_repo}", :confirm => "Are you sure you want to quit triaging '#{sub.repo.path}'?") do %>
-            <i class="icon-remove icon-white"></i>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<%= link_to 'Find additional repos to Triage', repos_path, :class => 'btn btn-info btn-large' %>
+<ul class="unstyled repos-list">
+  <% @repos_subs.each do |sub| %>
+    <li>
+      <h4><%= link_to sub.repo.name, sub.repo %>  <span class="badge badge-info"><%= sub.repo.issues_count %></span></h4>
+      <p><%= raw sub.repo.description %></p>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to 'Find additional repos', repos_path, :class => 'btn btn-success' %>
+<%= link_to "Submit a Repo", new_repo_path, :class => 'btn btn-success' %>
