--- a/app/views/repos/show.html.erb
+++ b/app/views/repos/show.html.erb
@@ -1,50 +1,40 @@
-<div class="row">
-  <div class="span8">
-    <h1><%= @repo.username_repo %> <small><%= @repo.language %></small></h1>
-    <p><%= link_to @repo.github_url, @repo.github_url %> </p>
-    <p>
-      <%= @repo.description %>
-    </p>
-    <hr />
-  </div>
-</div>
+<h1><%= @repo.name %> <small><%= @repo.language %></small></h1>
+<p><%= link_to @repo.github_url, @repo.github_url %> </p>
+<p>
+  <%= @repo.description %>
+</p>
+<% unless @repo.notes.blank? %>
+  <p>
+    <%= raw BlueCloth.new(@repo.notes).to_html %>
+  </p>
+<% end -%>
+<hr />
 
-<div class="row">
-  <div class="span6">
 
-    <ul class="unstyled avatars_list">
-      <%= render 'subscribers/avatars', subscribers: @subscribers, show_names: false %>
-      <% if (difference = @repo.subscribers.count - @subscribers.count) && difference > 0  %>
-        <li class='more'><%= link_to 'more' , repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) %></li>
+<ul class="unstyled avatars_list">
+  <%= render 'subscribers/avatars', subscribers: @subscribers, show_names: false %>
+  <% if (difference = @repo.subscribers.count - @subscribers.count) && difference > 0  %>
+    <li class='more'><%= link_to 'more' , repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) %></li>
+  <% end %>
+</ul>
+
+<p>
+  <%= link_to repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) do %>
+    <%=  @repo.subscribers.count %> Subscribers
+  <% end %>
+</p>
+
+<p>
+  <% if user_signed_in? && current_user.able_to_edit_repo?(@repo) %>
+    <%= link_to "Edit this repo", edit_repo_path(@repo), class: 'btn btn-mini' %>
+  <% end -%>
+
+  <% if @repo_sub %>
+      <%= link_to repo_subscription_path(@repo_sub), :class => 'btn btn-danger', :method => :delete, :data => { :confirm => 'Are you sure?' } do %>
+        <i class="icon-remove icon-white"></i> Stop Triaging
       <% end %>
-    </ul>
-
-    <%= link_to repo_subscribers_path(:user_name => @repo.user_name, :name => @repo.name) do %>
-      <%=  @repo.subscribers.count %> Subscribers
-    <% end %>
-    <% unless @repo.notes.blank? %>
-      <p>
-        <%= raw BlueCloth.new(@repo.notes).to_html %>
-      </p>
-    <% end -%>
-  </div>
-
-  <div class="span2">
-    <% if user_signed_in? && current_user.able_to_edit_repo?(@repo) %>
-      <p>
-      <%= link_to "Edit this repo", edit_repo_path(@repo), class: 'btn btn-mini' %>
-      </p>
-    <% end -%>
-
-    <% if @repo_sub %>
-      <p>
-        <%= link_to repo_subscription_path(@repo_sub), :class => 'btn btn-danger', :method => :delete, :data => { :confirm => 'Are you sure?' } do %>
-          <i class="icon-remove icon-white"></i> Stop Triaging
-        <% end %>
-      </p>
-    <% end -%>
-  </div>
-</div>
+  <% end -%>
+</p>
 
 <hr />
 
@@ -54,10 +44,10 @@
 </p>
 
 <% if @repo_sub.blank? %>
-	<%= button_to "I Want to Triage: #{@repo.username_repo}", repo_subscriptions_path(:repo_id => @repo.id), :class => 'btn btn-primary' %>
+	<%= button_to "I Want to Triage: #{@repo.username_repo}", repo_subscriptions_path(:repo_id => @repo.id), :class => 'btn btn-primary btn-success' %>
 <% else %>
   <p>
-    <%= link_to issue_assignments_path(:id => @repo_sub.id), :class => 'btn btn-primary', :method => :post do %>
+    <%= link_to issue_assignments_path(:id => @repo_sub.id), :class => 'btn btn-success', :method => :post do %>
       <i class="icon-envelope icon-white"></i> Send new issue!
     <% end %>
   </p>
